# neuralNetwork

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_Windows.txt  CMakeLists_noBoincOrMPI.txt  CMakeLists_seam_server.txt  CMakeLists_server.txt  CNN_config_example.txt  ConvNet.cpp  ConvNet.h  ConvNetDriver.cpp  ConvNetTest.cpp  FileDeleter.cpp  ImageFileCreator.cpp  ImageSplitter.cpp  NeuralNetworkFunctions.cpp  NeuralNetworkFunctions.h  OpenCLTest.cpp  README.win  TrainingImageFileCreator.cpp  conanfile.txt  exclusiveOrNN.cpp  kernelBuilder.cpp  readMe.txt
Old/oldCode/: NeuralNetworkFunctions.h  OpenCLTest.cpp
Wildlife_Loop_Train/: .gitignore  Wildlife_Loop_Train.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
boinc/: CMakeLists.txt
boinc/app/: CMakeLists.txt  ConvNetSeamRun_BOINC.cpp
boinc/server/: CMakeLists.txt  ConvNetSeam_assimilator.cxx  ConvNetSeam_work_generator.cxx
cmake/Modules/: FindBOINC.cmake  FindMySQL.cmake
include/: ConvNet.h  ConvNetCL.h  ConvNetCL_light.h  ConvNetCommon.h  ConvNetEvent.h  ConvNetSeam.h  IDX.h  MSILocations.h  Seamcarver.h
kernels/: Add_kernel.cl  ConvNetForward_kernel.cl  ConvNetKernel.cl  ConvNetTraining_kernel.cl  ConvNetTraining_kernel_dropout.cl  Seamcarve_kernels.cl
oldCode/: threadTest.cpp
src/: BlobCounter.cpp  Blob_comparator.py  Blob_metadata_extractor.py  Boinc_Helper_Functions.h  CLTest.cpp  CMakeLists.txt  CNNtoObserver_comparator.cpp  CombineIDX_Thesis.cpp  ConvNet.cpp  ConvNet.h  ConvNetCL.cpp  ConvNetCL.h  ConvNetCL_light.cpp  ConvNetCL_light.h  ConvNetCommon.cpp  ConvNetContinuance.cpp  ConvNetContinuanceCL.cpp  ConvNetDriver.cpp  ConvNetEvent.cpp  ConvNetEvent.h  ConvNetFullImageDriver.cpp  ConvNetFullImageDriverCL.cpp  ConvNetFullImageDriverCL_BOINC.cpp  ConvNetFullImageDriverParallelCL.cpp  ConvNetSeam.cpp  ConvNetSeam.h  ConvNetSeamFile.cpp  ConvNetSeamRun_BOINC.cpp  ConvNetSeamTrain.cpp  ConvNetSeamTrain_AllInOne.cpp  ConvNetSeam_ToIDX.cpp  ConvNetSeam_assimilator.cxx  ConvNetSeam_validator.cxx  ConvNetSeam_work_generator.cxx  ConvNetTest.cpp  ConvNetTester.cpp  ConvNetTrainer.cpp  ConvNetTrainerCL.cpp  ConvNetTrainerCL_idx.cpp  ConvNetVideoDriver.cpp  (+27 more)
src/Deprecated/: CLTest.cpp  ConvNet.cpp  ConvNetContinuance.cpp  ConvNetDriver.cpp  ConvNetFullImageDriverCL.cpp  ConvNetSeamFile.cpp  ConvNetTest.cpp  ConvNetTester.cpp  ConvNetTrainerCL.cpp  ConvNetVideoDriverMPI.cpp  ConvNet_Video_validator.cxx  Data_Processing.py  ImageFileCreator.cpp  ImageSplitterFileCreator.cpp  MNIST_test.cpp  SeamTest.cpp  TrainingImageFileCreator.cpp  TrainingImageSplitterFileCreator.cpp
src/Video_Drivers/: ConvNetVideoDriver.cpp  ConvNetVideoDriverParallel.cpp  ConvNetVideoDriverParallelCL_2classTern.cpp
tools/build_openssl/: .gitignore  INSTALL.txt  copy_openssl_pys.py  patch_ntdll_mak.py  rebuild_openssl_vs2015.cmd
